# cmaes

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  deploy.sh
.githooks/: pre-commit
.github/workflows/: rust.yml
benches/: iter.rs
examples/: custom_type.rs  parallel_execution.rs  restarts.rs  rosenbrock.rs  simple.rs  single_line.rs
src/: cmaes.rs  cmaes_loop.rs  fitness.rs  functions.rs  history.rs  lib.rs  matrix.rs  mode.rs  objective_function.rs  options.rs  plotting.rs  sampling.rs  state.rs  termination.rs  utils.rs  vector.rs
src/parameters/: mod.rs  weights.rs
src/plotting/: data.rs  draw.rs  mod.rs  options.rs  utils.rs
src/restart/: bipop.rs  ipop.rs  local.rs  mod.rs  options.rs  strategy.rs
tests/: general.rs  termination.rs
