[package]
name = "cmaes"
version = "0.1.1"
edition = "2021"
description = "An implementation of the CMA-ES optimization algorithm."
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cmaes"
repository = "https://github.com/pengowen123/cmaes"


[features]
# For BLAS/LAPACK
default    = ["netlib"]
openblas   = ["nalgebra-lapack/openblas"]
netlib     = ["nalgebra-lapack/netlib"]
accelerate = ["nalgebra-lapack/accelerate"]
intel-mkl  = ["nalgebra-lapack/intel-mkl"]

[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
nalgebra = "0.30.1"
statrs = "0.15.0"

[dependencies.nalgebra-lapack]
version = "0.21.0"
default-features = false

[dependencies.plotters]
version = "0.3.1"
default-features = false
features = [ "bitmap_backend", "bitmap_encoder", "line_series" ]

[dev-dependencies]
assert_approx_eq = "1.1.0"
