[package]
name = "cmaes"
version = "0.2.1"
edition = "2021"
description = "An implementation of the CMA-ES optimization algorithm."
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cmaes"
repository = "https://github.com/pengowen123/cmaes"

[features]
default    = ["plotters"]
# For BLAS/LAPACK
openblas   = ["nalgebra-lapack/openblas"]
netlib     = ["nalgebra-lapack/netlib"]
accelerate = ["nalgebra-lapack/accelerate"]
intel-mkl  = ["nalgebra-lapack/intel-mkl"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.5.1"
nalgebra = "0.33"
statrs = "0.18"

[dependencies.nalgebra-lapack]
version = "0.25"
optional = true
default-features = false

[dependencies.plotters]
version = "0.3"
optional = true
default-features = false
features = [ "bitmap_backend", "bitmap_encoder", "line_series" ]

[dev-dependencies]
assert_approx_eq = "1.1.0"

[dev-dependencies.criterion]
version = "0.3.5"
default-features = false
features = [ "html_reports", "cargo_bench_support" ]

[[bench]]
name = "iter"
harness = false
